--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <ion-app>
   <ion-content fullscreen>
-    <iframe src="https://view360.flyingcam-vietnam.com/project2023/symlife-final/" frameborder="0"
-      style="width: 100vw; height: 100vh; border: none;"></iframe>
+    <iframe src="assets/static-html/index.html" style="width: 100vw; height: 100vh; border: none"></iframe>
   </ion-content>
 </ion-app>
